[gd_scene load_steps=6 format=2]

[ext_resource path="res://Characters/Link/Health.gd" type="Script" id=1]
[ext_resource path="res://Audio/SFX/Link/Hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://Audio/SFX/Link/LowHealth.wav" type="AudioStream" id=3]
[ext_resource path="res://Audio/SFX/Link/Death.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]

length = 0.36
loop = false
step = 0.06
tracks/0/type = "value"
tracks/0/path = NodePath("../Sprite:material:shader_param/damage")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.06, 0.12, 0.18, 0.24, 0.3, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true, false, true, false ]
}

[node name="Health" type="Node2D"]

script = ExtResource( 1 )

[node name="HitStun" type="Timer" parent="." index="0"]

process_mode = 1
wait_time = 0.36
one_shot = true
autostart = false

[node name="LowHealth" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.96
one_shot = false
autostart = false

[node name="hitAnimation" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Hit = SubResource( 1 )
anims/HitAnim = SubResource( 1 )
blend_times = [  ]
_sections_unfolded = [ "Playback Options" ]

[node name="HurtSFX" type="Node2D" parent="." index="3"]

[node name="Hurt" type="AudioStreamPlayer" parent="HurtSFX" index="0"]

stream = ExtResource( 2 )
volume_db = -18.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="LowHealth" type="AudioStreamPlayer" parent="HurtSFX" index="1"]

stream = ExtResource( 3 )
volume_db = -22.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="Death" type="AudioStreamPlayer" parent="HurtSFX" index="2"]

stream = ExtResource( 4 )
volume_db = -15.0
autoplay = false
mix_target = 0
bus = "Master"


